test/TestPhases/typechecker/invalid/prevOnActivity.blc
activity Q(a: int32)(b: int32) returns int32
    b = a
    await true
    return a
end

@[EntryPoint]
activity P(a: int32)(x: int32)
    var arr: [10]int32
    var y : int32
    run y = prev Q(a)(x)
    await arr[y] > 0
end